# livekit-agent-platform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  server-worker.py  test.py
tools/: ddgs.py  excel_calculator.py  nodo_tool.py  scrawl_website.py  search_information_from_knowledge_base.py
utils/: async_cache_file.py
