[project]
name = "livekit-voice-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "livekit==1.0.12",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]>=1.2.8",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "markitdown[docx,pdf,xls,xlsx]>=0.1.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "trafilatura>=1.6.1",
]
